--- a/gui/coldsim.glade
+++ b/gui/coldsim.glade
@@ -6,6 +6,7 @@
     <property name="title" translatable="yes">ColdSim</property>
     <property name="modal">True</property>
     <property name="window_position">center</property>
+    <property name="icon">favicon.ico</property>
     <signal name="destroy" handler="main_quit"/>
     <signal name="delete_event" handler="store_position"/>
     <child>
@@ -63,6 +64,31 @@
                           <widget class="GtkImage" id="image3">
                             <property name="visible">True</property>
                             <property name="stock">gtk-quit</property>
+                          </widget>
+                        </child>
+                      </widget>
+                    </child>
+                  </widget>
+                </child>
+              </widget>
+            </child>
+            <child>
+              <widget class="GtkMenuItem" id="menu_settings">
+                <property name="visible">True</property>
+                <property name="label" translatable="yes">&#x418;&#x43D;&#x441;&#x442;&#x440;&#x443;&#x43C;&#x435;&#x43D;&#x442;&#x44B;</property>
+                <child>
+                  <widget class="GtkMenu" id="menu4">
+                    <property name="visible">True</property>
+                    <child>
+                      <widget class="GtkImageMenuItem" id="imagemenuitem">
+                        <property name="label" translatable="yes">&#x41D;&#x430;&#x441;&#x442;&#x440;&#x43E;&#x439;&#x43A;&#x438;...</property>
+                        <property name="visible">True</property>
+                        <property name="use_stock">False</property>
+                        <signal name="activate" handler="settings_show"/>
+                        <child internal-child="image">
+                          <widget class="GtkImage" id="image8">
+                            <property name="visible">True</property>
+                            <property name="stock">gtk-preferences</property>
                           </widget>
                         </child>
                       </widget>
@@ -7237,6 +7263,78 @@ nE0sIghT &lt;admin@coldzone.ru&gt;</property>
             <property name="expand">False</property>
             <property name="pack_type">end</property>
             <property name="position">0</property>
+          </packing>
+        </child>
+      </widget>
+    </child>
+  </widget>
+  <widget class="GtkWindow" id="window_settings">
+    <property name="title" translatable="yes">&#x41D;&#x430;&#x441;&#x442;&#x440;&#x43E;&#x439;&#x43A;&#x438;</property>
+    <property name="modal">True</property>
+    <property name="window_position">center-on-parent</property>
+    <property name="destroy_with_parent">True</property>
+    <property name="transient_for">window_main</property>
+    <signal name="delete_event" handler="settings_hide"/>
+    <child>
+      <widget class="GtkVBox" id="vbox12">
+        <property name="visible">True</property>
+        <property name="orientation">vertical</property>
+        <child>
+          <widget class="GtkFrame" id="frame15">
+            <property name="visible">True</property>
+            <property name="label_xalign">0</property>
+            <child>
+              <widget class="GtkAlignment" id="alignment13">
+                <property name="visible">True</property>
+                <property name="border_width">5</property>
+                <property name="left_padding">12</property>
+                <child>
+                  <widget class="GtkCheckButton" id="remember_position">
+                    <property name="label" translatable="yes">&#x417;&#x430;&#x43F;&#x43E;&#x43C;&#x438;&#x43D;&#x430;&#x442;&#x44C; &#x43F;&#x43E;&#x437;&#x438;&#x446;&#x438;&#x44E; &#x43E;&#x43A;&#x43D;&#x430; &#x43F;&#x43E;&#x441;&#x43B;&#x435; &#x437;&#x430;&#x43A;&#x440;&#x44B;&#x442;&#x438;&#x44F;</property>
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="receives_default">False</property>
+                    <property name="draw_indicator">True</property>
+                  </widget>
+                </child>
+              </widget>
+            </child>
+            <child>
+              <widget class="GtkLabel" id="label161">
+                <property name="visible">True</property>
+                <property name="label" translatable="yes">&lt;b&gt;&#x41E;&#x431;&#x449;&#x438;&#x435;&lt;/b&gt;</property>
+                <property name="use_markup">True</property>
+              </widget>
+              <packing>
+                <property name="type">label_item</property>
+              </packing>
+            </child>
+          </widget>
+          <packing>
+            <property name="position">0</property>
+          </packing>
+        </child>
+        <child>
+          <widget class="GtkHButtonBox" id="hbuttonbox8">
+            <property name="visible">True</property>
+            <child>
+              <widget class="GtkButton" id="button18">
+                <property name="label" translatable="yes">&#x41E;&#x41A;</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+                <signal name="clicked" handler="settings_hide"/>
+                <signal name="activate" handler="settings_hide"/>
+              </widget>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">False</property>
+                <property name="position">0</property>
+              </packing>
+            </child>
+          </widget>
+          <packing>
+            <property name="position">1</property>
           </packing>
         </child>
       </widget>
