--- a/gui/coldsim.glade
+++ b/gui/coldsim.glade
@@ -3405,7 +3405,7 @@
                                             <property name="active">0</property>
                                             <property name="items" translatable="yes">1
 1.5</property>
-                                            <signal name="changed" handler="fleet_factor_changed"/>
+                                            <signal name="changed" handler="game_factor_changed"/>
                                           </widget>
                                           <packing>
                                             <property name="expand">False</property>
